--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>BroCodeJS</title>
 </head>
 <body>
-    <a href="/Stopwatch/index.html" target="_blank">1.Stopwatch</a>
+    <a href="Stopwatch/index.html" target="_blank">1.Stopwatch</a>
     
 </body>
 </html>
