--- a/BroCode/index.html
+++ b/BroCode/index.html
@@ -11,7 +11,7 @@
 <body>
     
 
-    <h1>Hello Mumma, Aapko Neend Aa rahi hai kya??</h1>
+    <h1>Haan bete kya kar riya hai?? </h1>
     <script src="index.js"></script>
 </body>
 
