Added percentage feature in calculator

--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -28,6 +28,7 @@
             <button id = "dot" onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
             <button onclick="clearDisplay()"  class="operator-btn">C</button>
+            <button onclick="appendToDisplay('%')" class="operator-btn">%</button>
             
         </div>
     </div>
