--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <a href="Stopwatch/index.html" target="_blank">1.Stopwatch</a>
-    <a href="BroCode/index.html"><h1>Rahul Pandey 😄</h1></a>
+    <a href="BroCode/index.html"><h1>BroCode</h1></a>
+    <a href="Calculator/index.html"><h1>Calculator</h1></a>
 </body>
 </html>
