--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <a href="Stopwatch/index.html" target="_blank">1.Stopwatch</a>
     <a href="BroCode/index.html"><h1>BroCode</h1></a>
     <a href="Calculator/index.html"><h1>Calculator</h1></a>
+    <a href="PlayGround/index.html"><h1>PlayGround</h1></a>
 </body>
 </html>
