Added rock-paper-scissor on the main index

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <a href="BroCode/index.html"><h1>BroCode</h1></a>
     <a href="Calculator/index.html"><h1>Calculator</h1></a>
     <a href="PlayGround/index.html"><h1>PlayGround</h1></a>
+    <a href="RockPaperScissors/index.html"><h1>Rock-Paper-Scissors</h1></a>
 </body>
 </html>
