--- a/Fetch/index.html
+++ b/Fetch/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Pokemon Finder</h1>
     <input type="text" placeholder="Enter Pokemon Name" id="pokemonSearch">
     <button onclick="fetchData()">Fetch Pokemon</button><br>
     <img src="" alt="Pokemon Sprite" style="display: none;" id="imageHolder">
