Indexed new projects and stylized home page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BroCodeJS</title>
+    <title>Sooryansh Singh - JS Projects</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="Stopwatch/index.html" target="_blank">1.Stopwatch</a>
-    <a href="BroCode/index.html"><h1>BroCode</h1></a>
-    <a href="Calculator/index.html"><h1>Calculator</h1></a>
-    <a href="PlayGround/index.html"><h1>PlayGround</h1></a>
-    <a href="RockPaperScissors/index.html"><h1>Rock-Paper-Scissors</h1></a>
+    <h1>Projects made on the learning journey of JavaScript</h1>
+    <div class="card">
+        <a href="Stopwatch/index.html" target="_blank">1.Stopwatch</a>
+        <a href="Calculator/index.html" target="_blank">2.Calculator</a>
+        <a href="PlayGround/index.html" target="_blank">3.ClassList Manipulation</a>
+        <a href="RockPaperScissors/index.html" target="_blank">4.Rock-Paper-Scissors</a>
+        <a href="Async/Await/index.html" target="_blank">5. Async/Await</a>
+        <a href="CallBack hell/index.html" target="_blank">6.CallBack Hell</a>
+        <a href="Fetch/index.html" target="_blank">7. Fetch (Pokemon Finder)</a>
+        <a href="Image Slider/index.html" target="_blank">8.Image Slider</a>
+        <a href="JSON/index.html" target="_blank">9. JSON Files</a>
+        <a href="Promise/index.html" target="_blank">10. Promise</a>
+        <a href="WeatherApp/index.html" target="_blank">11. Weather App (Vedar)</a>
+    </div>
+
+    <div class="copyright">
+        <p>
+            Copyright © 2025
+            Sooryansh Singh <br>
+            <span id="rights">All rights reserved.</span>
+        </p>
+    </div>
+    
 </body>
 </html>
