--- a/RockPaperScissors/index.html
+++ b/RockPaperScissors/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlayGround</title>
+    <title> 👊 </title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://kit.fontawesome.com/918c2416d8.js" crossorigin="anonymous"></script>
 
