--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <div class="weatherHolder">
+        <h1 id="title">Vedar</h1>
         <form action="" class="search">
                 <input type="text" placeholder="Enter City" class="searchBox">
                 <button type="submit">Get Weather</button>
